remove unnecessary markup from brand title and attempt to correct width of brand elements on mobile

--- a/src/scss/brand.scss
+++ b/src/scss/brand.scss
@@ -58,6 +58,7 @@
 @media screen and (max-width: 400px) {
   .header__logo {
     height: 75%;
+    max-width: 30%;
   }
 
   .header__title{
@@ -67,6 +68,7 @@
   .header__brand-text{
     align-self: center;
     padding: 0 10px 0 0;
+    max-width: 65%;
 
     p {
       font-size: 10px;
